<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/app_logo"
        android:layout_width="@dimen/default_object_width"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logo" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/high_score"
        android:layout_alignBottom="@+id/high_score"
        android:layout_centerHorizontal="true"
        android:text="@string/score"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/app_logo"
        android:contentDescription="@string/high_score"
        android:text="@string/high_score" />

    <GridView
        android:id="@+id/game_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_logo"
        android:gravity="center"
        android:horizontalSpacing="@dimen/default_padding"
        android:numColumns="4"
        android:paddingBottom="@dimen/default_padding"
        android:paddingTop="@dimen/default_padding"
        android:verticalSpacing="@dimen/default_padding" />

</RelativeLayout>